--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button name="formBtn" class="formBtn">
             Create
             <div class="movingLine"></div>
-            <span class="secondLine"></span>
+            <div class="secondLine"></div>
         </button>
     </form>
 
